--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             transform: translate(0px, 0px);
         }
       }
+      @media only screen and (max-width: 600px) {
+        .section1-1 {
+          margin-left: auto;
+          margin-right: auto;
+          margin-top: 30px;
+        }
+      }
     </style>
   </head>
   <body>
